--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,12 +21,12 @@ jobs:
             node-version: 12
       - name: Run unit tests
         run: |
-          npm install -g grunt-cli node-qunit-phantomjs
+          npm install -g grunt-cli node-qunit-puppeteer
           npm install --prefix build
           grunt --gruntfile build/Gruntfile.js develop
-          node-qunit-phantomjs cell/.unit-tests/FormulaTests.html
-          node-qunit-phantomjs --timeout 15 cell/.unit-tests/PivotTests.html
-          node-qunit-phantomjs cell/.unit-tests/CopyPasteTests.html
+          node-qunit-puppeteer cell/.unit-tests/FormulaTests.html
+          node-qunit-puppeteer cell/.unit-tests/PivotTests.html
+          node-qunit-puppeteer cell/.unit-tests/CopyPasteTests.html
   builder-tests:
     runs-on: ubuntu-latest
     steps:
