--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -45,4 +45,4 @@ jobs:
                       -v $PWD/deploy/sdkjs/word:/opt/onlyoffice/documentbuilder/sdkjs/word \
                       -v $PWD/deploy/sdkjs/cell:/opt/onlyoffice/documentbuilder/sdkjs/cell \
                       -v $PWD/deploy/sdkjs/slide:/opt/onlyoffice/documentbuilder/sdkjs/slide \
-                      onlyofficeqa/doc-builder-testing:latest
+                      onlyofficeqa/doc-builder-testing:latest rake rspec_critical
