--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -28,6 +28,7 @@ jobs:
           node-qunit-puppeteer cell/.unit-tests/subdir/PivotTests.html
           node-qunit-puppeteer cell/.unit-tests/CopyPasteTests.html
           node-qunit-puppeteer tests/word/document-calculation/paragraph.html
+          node-qunit-puppeteer tests/word/forms/forms.html
   builder-tests:
     runs-on: ubuntu-latest
     steps:
