--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -29,6 +29,7 @@ jobs:
           node-qunit-puppeteer cell/.unit-tests/CopyPasteTests.html
           node-qunit-puppeteer tests/word/document-calculation/paragraph.html
           node-qunit-puppeteer tests/word/forms/forms.html
+          node-qunit-puppeteer tests/word/forms/complexForm.html
   builder-tests:
     runs-on: ubuntu-latest
     steps:
